Added Sprint 1 mobile automation test cases